prod_snapshot_2015-09-24_1030/objects/OnBoardFormModel__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Copy__c</fullName>
        <label>Ad Copy Review Required</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertiser_Company_Name__c</fullName>
        <description>Lead.Company</description>
        <label>Advertiser Company Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Contact_First_Name__c</fullName>
        <description>Lead.FirstName</description>
        <label>Advertiser Contact - First Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Contact_Last_Name__c</fullName>
        <description>Lead.LastName</description>
        <label>Advertiser Contact - Last Name</label>
        <length>29</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Contact_Phone__c</fullName>
        <description>Contact.Phone</description>
        <label>Advertiser Contact Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Advertiser_Email_Address__c</fullName>
        <description>Contact.Email</description>
        <label>Advertiser Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advertiser_Industry_Id__c</fullName>
        <description>Id that maps to a lookup on AMP</description>
        <label>Advertiser Industry Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertiser_Industry_Or_Focus_Other__c</fullName>
        <description>This field stores the value for other selection in Advertiser Industry or Advertiser Industry Focus</description>
        <label>Advertiser Industry Or Campaign Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertiser_Industry__c</fullName>
        <label>Advertiser Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Primary_Focus_Id__c</fullName>
        <description>Id that maps to value in AMP</description>
        <label>Advertiser Primary Focus Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertiser_Primary_Focus__c</fullName>
        <label>Advertiser Primary Focus</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Web_Address__c</fullName>
        <label>Advertiser Web Address</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Text__c</fullName>
        <inlineHelpText>Sales Rep Name - Entered If Not Available In The Default List</inlineHelpText>
        <label>Affl Sales Rep Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep chosen from the dynamic pick list on the UI</description>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OnBoardFormModels</relationshipLabel>
        <relationshipName>OnBoardFormModels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Are_We_Hosting_Email_at_Same_URL_Domain__c</fullName>
        <label>Are We Hosting Email at Same URL/Domain?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Broadcast_Date10__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Date10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Date11__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Date11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Date12__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Date12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Time10__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Time10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadcast_Time11__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Time11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadcast_Time12__c</fullName>
        <description>This field is hidden.</description>
        <label>Broadcast Time12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Differentiators__c</fullName>
        <label>Business Differentiators</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Prices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fastest Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Payment_Methods_Accepted__c</fullName>
        <label>Business Payment Methods Accepted</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CMS_Login_URL__c</fullName>
        <label>CMS Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMS_Used_Other__c</fullName>
        <description>WordPress, Joomla, Drupal, Dealer.com, Other. (Other has free text)

This textbox is for other</description>
        <label>CMS Used Other</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Used__c</fullName>
        <label>CMS Used</label>
        <picklist>
            <picklistValues>
                <fullName>WordPress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joomla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drupal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Email__c</fullName>
        <label>Campaign Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Impressions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Goals__c</fullName>
        <label>Primary Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_City__c</fullName>
        <description>Campaign Target City</description>
        <label>Campaign Target City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_Geographical_Location__c</fullName>
        <description>Geographic area to Target</description>
        <label>Geographic area to Target</label>
        <picklist>
            <controllingField>SEO_Package__c</controllingField>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_State__c</fullName>
        <description>Campaign Target State</description>
        <label>Campaign Target State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Establishing relationship to Case Object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>OnBoardForm</relationshipLabel>
        <relationshipName>OnBoardFormModel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clickthrough_URL10__c</fullName>
        <label>Clickthrough URL(10 of 10)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Clickthrough_URL1__c</fullName>
        <label>Clickthrough URL(1 of 10)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Clickthrough_URL2__c</fullName>
        <label>Clickthrough URL(2 of 10)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Email_Provider_Name__c</fullName>
        <description>Client Email Provider Name</description>
        <label>Client Email Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_From_Email_Address__c</fullName>
        <description>In relation to &apos;Opt-In Email System&apos;</description>
        <label>Client From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_From_Name__c</fullName>
        <description>In relation to &apos;Opt-in Email System&apos;</description>
        <label>Client From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor1__c</fullName>
        <description>Competitor URL (1 of 3)</description>
        <label>Competitor URL (1 of 3)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor2__c</fullName>
        <description>Competitor URL (2 of 3)</description>
        <label>Competitor URL (2 of 3)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor3__c</fullName>
        <description>Competitor URL (3 of 3)</description>
        <label>Competitor URL (3 of 3)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Confirm_Manager_Level_Admin_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Client understands they are required to grant Manager Level Admin Access to glsocial@gannett.com when requested (instructions provided).</inlineHelpText>
        <label>Confirm Manager Level Admin Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_LCP__c</fullName>
        <label>Contract Length (Months) LCP</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_LocalPlaces__c</fullName>
        <label>Contract Length (Months) Maps&amp;Reputation</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_ManagedEmail__c</fullName>
        <label>Contract Length (Months) ManagedEmail</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_PPC__c</fullName>
        <label>Contract Length (Months) PPC</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_SEO__c</fullName>
        <label>Contract Length (Months) SEO</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_SocialAds__c</fullName>
        <label>Contract Length (Months) SocialAds</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_SocialMedia__c</fullName>
        <label>Contract Length (Months) SocialMedia</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_Websites__c</fullName>
        <label>Contract Length (Months) Websites</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_Others_on_Fulfillment_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you want any others to be copied on fulfillment notifications?</inlineHelpText>
        <label>Copy Others on Fulfillment Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Theme_Ideas__c</fullName>
        <label>Social Voice</label>
        <picklist>
            <picklistValues>
                <fullName>Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corp_Partner_Code__c</fullName>
        <description>Codes assigned by Gannett Corporate for General Ledger purposes, however, will be utilized by G/O Digital as a code directly linked to the Partner Markets for various purposes such as API&apos;s, naming convention and consolidation of our current Media Partner list.</description>
        <inlineHelpText>Gannett Corporate codes for General Ledger purposes. Also utilized by G/O Digital for linking to the Partner Markets for API&apos;s, naming convention and consolidation of our current Media Partner list.</inlineHelpText>
        <label>Corp Partner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_ID__c</fullName>
        <inlineHelpText>Enter your count ID if answered yes above</inlineHelpText>
        <label>Count ID(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Facebook_URL__c</fullName>
        <label>Current Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Desired_URL_Domain_Name__c</fullName>
        <label>Desired URL / Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Do_Not_Start_Before__c</fullName>
        <description>Date Field with validation that date is at least 7 business days in advance of date of entry</description>
        <label>Do Not Start Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_not_Start_Before_Business_Days__c</fullName>
        <description>This Validation is true for only insert and not for update as per the current requirement</description>
        <formula>IF(AND((5 - (CASE(MOD( TODAY()  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  Do_Not_Start_Before__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( Do_Not_Start_Before__c   -    TODAY()  ) + 1) &lt; 7)), 
((CASE(MOD(  Do_Not_Start_Before__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(   TODAY()   - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( Do_Not_Start_Before__c   -   TODAY()  ) - (CASE(MOD(   TODAY()   - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(   TODAY()   - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD(  Do_Not_Start_Before__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do not Start Before Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Domain name of existing URL</description>
        <label>Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_Registrar_Other__c</fullName>
        <description>Domain_Registrar_Other is a free text when the picklist is other selected</description>
        <label>Domain_Registrar_Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Registrar_Password__c</fullName>
        <label>Domain Registrar Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Registrar_Username__c</fullName>
        <label>Domain Registrar Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Registrar__c</fullName>
        <label>Domain Registrar</label>
        <picklist>
            <picklistValues>
                <fullName>Dotster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoDaddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Register.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Campaign_Type_Other__c</fullName>
        <description>newsletter, coupon/offer, triggered, other: Write-in</description>
        <label>Email Campaign Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Campaign_Type__c</fullName>
        <label>Email Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon/Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triggered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Count_Pulled_in_Last_60_Days__c</fullName>
        <inlineHelpText>Have you had an email count pulled in the last 60 days?</inlineHelpText>
        <label>Email Count within Last 60 Days?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Hosting_Desired_Email10__c</fullName>
        <label>Email Hosting Desired Email 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Hosting_Desired_Email1__c</fullName>
        <label>Email Hosting Desired Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Hosting_Desired_Email2__c</fullName>
        <label>Email Hosting Desired Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Hosting_sel__c</fullName>
        <description>Websites&gt; Custom Website &gt; Email Hosting?</description>
        <label>Email Hosting?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Recipients_per_Blast__c</fullName>
        <label>Qty of Recipients per Email Blast</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Subscribers__c</fullName>
        <label>Email Subscribers</label>
        <picklist>
            <picklistValues>
                <fullName>0-499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500-2,499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,500-4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000-9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-15,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Use_Template_or_Custom_Layout__c</fullName>
        <label>Email Use Template or Custom Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FB_Target_Geographical_Location__c</fullName>
        <label>FB Target Geographical Location</label>
        <picklist>
            <picklistValues>
                <fullName>Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>